# oban-py

./: CHANGELOG.md  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  defining_queues.md  enqueueing_jobs.md  index.md  installation.md  job_maintenance.md  managing_queues.md  production.md  quickstart.md  testing.md  web_dashboard.md  writing_jobs.md
examples/fastapi/: Makefile  README.md  oban.toml  pyproject.toml
examples/fastapi/app/: __init__.py  main.py  workers.py
migrations/: env.py
migrations/versions/: 62e0902657b1_create_oban_tables.py
oban/: __init__.py  _config.py  _executor.py  _leader.py  _lifeline.py  _metrics.py  _notifier.py  _producer.py  _pruner.py  _query.py  _refresher.py  _runner.py  _scheduler.py  _stager.py  _unique.py  _worker.py  cli.py  config.py  decorators.py  job.py  leader.py  oban.py  peer.py  schema.py  testing.py  types.py
oban/queries/: all_jobs.sql  cancel_all_jobs.sql  cancel_job.sql  check_available_queues.sql  complete_job.sql  count_jobs.sql  error_job.sql  estimate_counts.sql  fetch_jobs.sql  insert_job.sql  insert_jobs.sql  insert_many.sql  install.sql  snooze_job.sql  stage_jobs.sql  uninstall.sql  update_job.sql
oban/telemetry/: logger.py
scripts/: setup_db.py
test/: benchmark_test.py  cli_test.py  config_test.py  conftest.py  decorator_test.py  executor_test.py  helpers.py  integration_test.py  job_test.py  leader_test.py  lifeline_test.py  metrics_test.py  notifier_test.py  oban_test.py  producer_test.py  pruner_test.py  scheduler_test.py  schema_test.py  telemetry_logger_test.py  testing_test.py  worker_test.py
