[project]
name = "oban"
version = "0.1.0"
description = "Job orchestration framework, backed by PostgreSQL."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "psycopg>=3.2.5",
  "psycopg-pool>=3.2.6",
  "pydantic>=2.11.9",
  "pytest-asyncio>=1.2.0",
  "uvloop>=0.21.0",
  "click>=8.1.0",
  "orjson>=3.11.4",
]

[project.scripts]
oban = "oban.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.9.9",
    "ty>=0.0.1a27",
]
docs = [
  "sphinx>=8.0.0",
  "sphinx-book-theme>=1.1.0",
  "myst-parser>=4.0.0",
  "sphinx-click>=6.0.0",
  "sphinx-autodoc-typehints>=2.0.0",
  "sphinx-design>=0.6.1",
]

[tool.uv]
package = true

[tool.ty.src]
exclude = ["test", "examples"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "oban: configure Oban instance options for a test",
    "benchmark: mark test as a benchmark (deselect with '-m \"not benchmark\"')",
]
addopts = "-m 'not benchmark'"
